# gpu-attention-kernels

./: .gitignore  CMakeLists.txt  README.md  attention.h  attention_flash.cu  attention_flash.h  benchmark_and_plot_up_to_2p13.sh  common.cuh  main.cu  reference.cpp  report1.qdstrm  requirements.txt  results.csv  results_wmma.csv  run_all_benchmarks.sh
benchmarks/: benchmark.cu
data/: Wk_1024.npy  Wk_128.npy  Wk_2048.npy  Wk_256.npy  Wk_4096.npy  Wk_512.npy  Wq_1024.npy  Wq_128.npy  Wq_2048.npy  Wq_256.npy  Wq_4096.npy  Wq_512.npy  Wv_1024.npy  Wv_128.npy  Wv_2048.npy  Wv_256.npy  Wv_4096.npy  Wv_512.npy  X_1024.npy  X_128.npy  X_256.npy  X_512.npy
include/: attention.h
python/: bench_flash_attn.py  generate_data.py  plot_banded.py  plot_memory_vs_seqlen.py  plot_results.py  plot_results_memory.py  plot_results_new.py  plot_runtime_vs_seqlen.py  plot_speedup_bars.py
results/: banded_window_w1024.csv  banded_window_w128.csv  banded_window_w256.csv  banded_window_w512.csv  banded_window_w64.csv  flash.csv  naive.csv  sparse_window_w1024.csv  sparse_window_w128.csv  sparse_window_w256.csv  sparse_window_w64.csv  tiled_online.csv
src/: reference.cpp
src/kernels/: banded.cu  banded.cuh  common.cuh  fill.cu  kernels.cu  kernels.cuh  tiled_online_attention.cu  tiled_online_attention.cuh  tiled_online_attention_wmma.cu  tiled_online_attention_wmma.cuh  window_mask.cu
src/utils/: npy_loader.h
src/wrappers/: attention.h  attention_banded_window.cu  attention_banded_window.h  attention_flash.cu  attention_fused.cu  attention_naive.cu  attention_sparse_window.cu  attention_sparse_window.h  attention_tiled.cu  attention_tiled_online.cu  attention_tiled_online_wmma.cu  attention_window.cu
